[tool.poetry]
name = "dutch-words"
version = "0.2.5"
description = ""
authors = ["Ramon de Jezus <rdejezus@leukeleu.nl>"]
readme = "README.rst"
repository = "https://github.com/leukeleu/dutch-words"
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
